--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-proxy": "^1.17.0",
+    "set-cookie-parser": "^2.2.1",
     "yargs": "^12.0.5"
   },
   "devDependencies": {},
